--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,7 @@ apply plugin: 'com.android.application'
       implementation 'com.google.android.material:material:1.2.1'
       implementation 'com.synnapps:carouselview:0.1.5'
       implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+      implementation 'org.jetbrains:annotations-java5:19.0.0'
       testImplementation 'junit:junit:4.12'
       androidTestImplementation 'androidx.test.ext:junit:1.1.2'
       androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
