--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services'
 
     android {
     compileSdkVersion 30
@@ -33,8 +34,10 @@ apply plugin: 'com.android.application'
       implementation 'com.synnapps:carouselview:0.1.5'
       implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
       implementation 'org.jetbrains:annotations-java5:19.0.0'
+      implementation 'com.google.firebase:firebase-storage:19.1.0'
       testImplementation 'junit:junit:4.12'
       androidTestImplementation 'androidx.test.ext:junit:1.1.2'
       androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-
+      // Import the Firebase BoM
+      implementation platform('com.google.firebase:firebase-bom:26.1.1')
   }
